--- a/emmet/01_anidar_elementos.html
+++ b/emmet/01_anidar_elementos.html
@@ -12,12 +12,7 @@ header>nav>ul>li>a
 </header>
 
 <!-- ejemplo  -->
-
-  <table>
-  	<tr>
-  		<td><span></span></td>
-  	</tr>
-  </table>
+table>tr>td>span
 
 <!-- Resultado -->
 <table>
