--- a/emmet/10_base_numeros_consecutivos.html
+++ b/emmet/10_base_numeros_consecutivos.html
@@ -10,4 +10,18 @@ ol>li{Lorem$@5}*5
 	<li>Lorem9</li>
 </ol>
 
+<!-- Ejemplo -->
+table>thead>tr>th#num$@3*3
+
+<!-- Resutlados -->
+<table>
+	<thead>
+		<tr>
+			<th id="num3"></th>
+			<th id="num4"></th>
+			<th id="num5"></th>
+		</tr>
+	</thead>
+</table>
+
 
