--- a/emmet/01_anidar_elementos.html
+++ b/emmet/01_anidar_elementos.html
@@ -11,14 +11,10 @@ header>nav>ul>li>a
 	</nav>
 </header>
 
-<!-- ejemplo  -->
 
-  <table>
-  	<tr>
-  		<td><span></span></td>
-  	</tr>
-  </table>
-
+<!-- Ejemplo  -->
+table>tr>td>span
+ 
 <!-- Resultado -->
 <table>
 	<tr>
