ejemplos con pug

--- a/pug/html/01_documento_html5.html
+++ b/pug/html/01_documento_html5.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Documento HTML 5</title>
   </head>
   <body>
     <h1>Documento HTML 5</h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo consectetur eveniet dolores maxime quibusdam quae sint debitis magnam, rem nihil, rerum et dolorem harum ullam dignissimos. Accusamus debitis quod corrupti!</p><a class="button" href="google.com" target="_blank">google</a>
-    <input type="checkbox" name="agreement" cheked><br><br><br>
-    <label>
-      <input type="radio" name="color">Amarillo
-    </label>
-    <label>
-      <input type="radio" name="color" checked>Azul
-    </label>
-    <label>
-      <input type="radio" name="color">Rojo
-    </label>
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo consectetur eveniet dolores maxime quibusdam quae sint debitis magnam, rem nihil, rerum et dolorem harum ullam dignissimos. Accusamus debitis quod corrupti!</p>
   </body>
 </html>
