--- a/pug/html/03_atributos_estilos.html
+++ b/pug/html/03_atributos_estilos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>estilos de los atributos</title>
   </head>
   <body>
     <h1>Estilos de los atributos</h1>
