--- a/pug/html/04_atributos_literales.html
+++ b/pug/html/04_atributos_literales.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta>
-    <title></title>
+    <meta charset="UTF-8">
+    <title>Atributos literales</title>
   </head>
   <body>
     <h1>Atributos Literales</h1>
