--- a/pug/html/06_javascript.html
+++ b/pug/html/06_javascript.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Documento con javascript</title>
   </head>
   <body>
     <h1>Javascript</h1>
@@ -11,7 +11,7 @@
     <script>
       var res=document.getElementById('respuesta');
       var pre=prompt('cuanto es 5+6?');
-      if(pre== 11){
+      if(pre == 11){
       	res.innerHTML='respuesta correcta';
       }else{
           res.innerHTML='respuesta Incorrecta';
