--- a/pug/html/07_casos.html
+++ b/pug/html/07_casos.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8">
-    <title>Casos</title>
+    <meta>
+    <title></title>
   </head>
   <body>
-    <!--1-->
-    <p>tiene 2 amigos </p>
+    <h1>casos</h1>
+    <hr>
+    <ul>
+      <li>tiene 40 goles en contra</li>
+    </ul>
   </body>
 </html>
