--- a/pug/html/08_codigo.html
+++ b/pug/html/08_codigo.html
@@ -2,18 +2,35 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8">
-    <title>Codigo ciclos</title>
+    <title>Codigo</title>
   </head>
-  <body></body>
-  <!--ciclo for 1-->
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
+  <body>
+    <h1>codigo</h1>
+    <hr>
+    <menu>
+      <ul></ul>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+      <li>elemento </li>
+    </menu>
+    <p>&lt;strong&gt; Lorem ipsum dolor &lt;/strong&gt;&lt;em&gt;sit.&lt;/em&gt;</p><br>
+    <p><strong> Lorem ipsum dolor </strong><em>sit.</em></p>
+  </body>
 </html>
