--- a/pug/html/10_condicionales.html
+++ b/pug/html/10_condicionales.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>Condicionales</title>
   </head>
-  <body></body>
-  <!--condicionales-->
-  <article id="user">
-    <h2 class="red">Descripcion</h2>
-    <p class="descripcion">no hay informacion</p>
-  </article>
+  <body>
+    <h1>Condicionales</h1>
+    <hr>
+    <article>
+      <h2>usted puede votar</h2>
+      <p>genero: femenino</p>
+      <p>peso: 120</p>
+      <p>altura: 180</p>
+    </article>
+  </body>
 </html>
