--- a/pug/html/09_comentarios.html
+++ b/pug/html/09_comentarios.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta metacharset="UTF-8">
+    <meta charset="UTF-8">
     <title>Comentarios</title>
   </head>
-  <body></body>
-  <!--comentarios de una sola linea	-->
-  <!--comentario en bloque  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis voluptatibus sint reiciendis accusantium repellat pariatur beatae dignissimos, officiis voluptas qui consequatur eveniet quo consequuntur asperiores veniam, temporibus, architecto rerum quidem?
-  -->
+  <body>
+    <h1>Comentarios</h1>
+    <hr>
+    <!--comentario linea (se ve en el marcado)-->
+    <!-- Comentario de bloque ( se ve en el marcado) Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus similique, unde iure assumenda in cumque deserunt, dicta commodi, quos labore voluptates ex doloremque facilis vitae, fugiat sequi vero mollitia veniam!
+    -->
+  </body>
 </html>
